embedding initialization and readme update

--- a/Examples.ipynb
+++ b/Examples.ipynb
@@ -346,27 +346,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 10.4 s\n"
+      "Wall time: 11.9 s\n"
      ]
     }
    ],
    "source": [
+    "%%time\n",
     "from pp.dependency_parser import DependencyParser\n",
     "dp = DependencyParser()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -387,13 +388,48 @@
        " (13, '.', 12, 'punct')]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "dp.predict(\"Maltepe'nin turlamak için güzel bir sahil yolu, bir de Dragos'u var.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1, 'Model', 0, 'nsubj'),\n",
+       " (2, 'ile', 4, 'cc'),\n",
+       " (3, 'ilk', 4, 'amod'),\n",
+       " (4, 'tahmini', 1, 'conj'),\n",
+       " (5, 'yapmak', 9, 'csubj'),\n",
+       " (6, 'biraz', 7, 'advmod'),\n",
+       " (7, 'daha', 9, 'advmod'),\n",
+       " (8, 'uzun', 9, 'compound'),\n",
+       " (9, 'sürüyor', 0, 'obl'),\n",
+       " (10, 'ama', 9, 'cc'),\n",
+       " (11, 'sonrakiler', 9, 'case'),\n",
+       " (12, 'için', 11, 'case'),\n",
+       " (13, 'bu', 14, 'obl'),\n",
+       " (14, 'süre', 15, 'obl'),\n",
+       " (15, 'kısa', 2, 'conj'),\n",
+       " (16, '.', 15, 'punct')]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dp.predict(\"Model ile ilk tahmini yapmak biraz daha uzun sürüyor ama sonrakiler için bu süre kısa.\")"
    ]
   },
   {
@@ -405,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -424,14 +460,14 @@
        "[('Vapurla', 'NOUN'),\n",
        " (\"Beşiktaş'a\", 'PROPN'),\n",
        " ('geçip', 'ADV'),\n",
-       " ('yürüyerek', 'ADV'),\n",
+       " ('yürüyerek', 'VERB'),\n",
        " ('Maçka', 'PROPN'),\n",
        " (\"Parkı'na\", 'NOUN'),\n",
        " ('ulaştım', 'VERB'),\n",
        " ('.', 'PUNCT')]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -442,15 +478,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "[('Hafta', 'NOUN'),\n",
-       " ('sonu', 'NOUN'),\n",
-       " ('yaklaşırken', 'ADV'),\n",
+       " ('sonu', 'ADJ'),\n",
+       " ('yaklaşırken', 'VERB'),\n",
        " (',', 'PUNCT'),\n",
        " ('cumartesi', 'NOUN'),\n",
        " ('günü', 'NOUN'),\n",
@@ -459,13 +495,13 @@
        " (\"Kadıköy'deki\", 'PROPN'),\n",
        " ('Viktor', 'PROPN'),\n",
        " (\"Levi'ye\", 'PROPN'),\n",
-       " ('gitmeye', 'NOUN'),\n",
+       " ('gitmeye', 'VERB'),\n",
        " ('karar', 'NOUN'),\n",
        " ('verdik', 'VERB'),\n",
        " ('.', 'PUNCT')]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -476,19 +512,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "[('Pek', 'ADV'),\n",
-       " ('çok', 'DET'),\n",
+       " ('çok', 'ADV'),\n",
        " ('popüler', 'ADJ'),\n",
        " ('filmde', 'NOUN'),\n",
        " ('başrol', 'NOUN'),\n",
        " ('oynamış', 'VERB'),\n",
-       " ('olsa', 'VERB'),\n",
+       " ('olsa', 'AUX'),\n",
        " ('da', 'CCONJ'),\n",
        " (',', 'PUNCT'),\n",
        " ('Christian', 'PROPN'),\n",
@@ -501,13 +537,98 @@
        " ('.', 'PUNCT')]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "pos.predict(\"Pek çok popüler filmde başrol oynamış olsa da, Christian Bale'in en sevdiğim filmi American Psycho.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Sentiment Analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 494 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pp.sentiment_analyzer import SentimentAnalyzer\n",
+    "sentiment_analyzer = SentimentAnalyzer()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.007859406"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sentiment_analyzer.predict_proba(\"Sipariş geldiğinde biz karnımızı çoktan atıştırmalıklarla doyurmuştuk.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sentiment_analyzer.predict(\"Servis daha iyi olabilirdi ama lezzet ve hız geçer not aldı, başarılı.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.4482034"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sentiment_analyzer.predict_proba(\"Yemekleriniz o kadar şahaneydi ki artık uzun bir süre meksika yemeği yemeyi düşünmüyorum.\")"
    ]
   },
   {
