typo correction dict lookup table removed with introduction of hunspell

--- a/Examples.ipynb
+++ b/Examples.ipynb
@@ -346,14 +346,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 11.9 s\n"
+      "Wall time: 12.8 s\n"
      ]
     }
    ],
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {
     "scrolled": false
    },
@@ -374,56 +374,56 @@
      "data": {
       "text/plain": [
        "[(1, \"Maltepe'nin\", 2, 'nmod'),\n",
-       " (2, 'turlamak', 5, 'nmod'),\n",
+       " (2, 'turlamak', 5, 'obl'),\n",
        " (3, 'için', 2, 'case'),\n",
        " (4, 'güzel', 5, 'amod'),\n",
        " (5, 'bir', 7, 'nmod'),\n",
        " (6, 'sahil', 7, 'nmod'),\n",
-       " (7, 'yolu', 12, 'root'),\n",
+       " (7, 'yolu', 9, 'nsubj'),\n",
        " (8, ',', 7, 'punct'),\n",
-       " (9, 'bir', 12, 'advmod'),\n",
-       " (10, 'de', 7, 'case'),\n",
-       " (11, \"Dragos'u\", 10, 'obj'),\n",
-       " (12, 'var', 7, 'conj'),\n",
+       " (9, 'bir', 12, 'nmod'),\n",
+       " (10, 'de', 9, 'flat'),\n",
+       " (11, \"Dragos'u\", 9, 'flat'),\n",
+       " (12, 'vardır', 0, 'root'),\n",
        " (13, '.', 12, 'punct')]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dp.predict(\"Maltepe'nin turlamak için güzel bir sahil yolu, bir de Dragos'u var.\")"
+    "dp.predict(\"Maltepe'nin turlamak için güzel bir sahil yolu, bir de Dragos'u vardır.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(1, 'Model', 0, 'nsubj'),\n",
-       " (2, 'ile', 4, 'cc'),\n",
+       "[(1, 'Model', 4, 'nmod'),\n",
+       " (2, 'ile', 4, 'det'),\n",
        " (3, 'ilk', 4, 'amod'),\n",
-       " (4, 'tahmini', 1, 'conj'),\n",
-       " (5, 'yapmak', 9, 'csubj'),\n",
-       " (6, 'biraz', 7, 'advmod'),\n",
-       " (7, 'daha', 9, 'advmod'),\n",
-       " (8, 'uzun', 9, 'compound'),\n",
-       " (9, 'sürüyor', 0, 'obl'),\n",
-       " (10, 'ama', 9, 'cc'),\n",
-       " (11, 'sonrakiler', 9, 'case'),\n",
-       " (12, 'için', 11, 'case'),\n",
-       " (13, 'bu', 14, 'obl'),\n",
-       " (14, 'süre', 15, 'obl'),\n",
-       " (15, 'kısa', 2, 'conj'),\n",
-       " (16, '.', 15, 'punct')]"
+       " (4, 'tahmini', 5, 'obl'),\n",
+       " (5, 'yapmak', 10, 'csubj'),\n",
+       " (6, 'biraz', 10, 'advmod'),\n",
+       " (7, 'daha', 10, 'advmod'),\n",
+       " (8, 'uzun', 10, 'flat'),\n",
+       " (9, 'sürüyor', 8, 'compound'),\n",
+       " (10, 'ama', 0, 'root'),\n",
+       " (11, 'sonrakiler', 10, 'case'),\n",
+       " (12, 'için', 10, 'case'),\n",
+       " (13, 'bu', 10, 'flat'),\n",
+       " (14, 'süre', 10, 'nmod'),\n",
+       " (15, 'kısa', 10, 'parataxis'),\n",
+       " (16, '.', 10, 'punct')]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -555,40 +555,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Wall time: 494 ms\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pp.sentiment_analyzer import SentimentAnalyzer\n",
     "sentiment_analyzer = SentimentAnalyzer()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.007859406"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sentiment_analyzer.predict_proba(\"Sipariş geldiğinde biz karnımızı çoktan atıştırmalıklarla doyurmuştuk.\")"
    ]
   },
   {
@@ -599,10 +571,30 @@
     {
      "data": {
       "text/plain": [
-       "1"
+       "0.007859406"
       ]
      },
      "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sentiment_analyzer.predict_proba(\"Sipariş geldiğinde biz karnımızı çoktan atıştırmalıklarla doyurmuştuk.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -648,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -658,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -667,7 +659,7 @@
        "'test karakterleri: iığüöşç'"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -678,16 +670,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'noktalamalıtestcümlesidir'"
+       "'noktalamalı test cümlesidir'"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -698,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -707,7 +699,7 @@
        "['böyle', 'şey', 'görmedim', 'duymadım']"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -718,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -739,7 +731,7 @@
        " 'gördüm']"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -750,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -759,7 +751,7 @@
        "'merhaba guzel yılkı atı'"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -770,42 +762,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['kasıtlı', 'yazım', 'hatası', 'kasıtlı', 'yazım', 'hatası']"
+       "['kasıtlı', 'yazım', 'hatası', 'ekliyorum']"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "n.correct_typos(\"kasssıtllı yazişm hatasıı kasıştlış yazışm hatassı\".split())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['bakarken']"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "n.correct_typos(\"bakarıekn\".split())"
+    "n.correct_typos(\"kassıtlı yaezım hatasssı ekliyorumm\".split())"
    ]
   },
   {
