--- a/Examples.ipynb
+++ b/Examples.ipynb
@@ -407,7 +407,7 @@
     }
    ],
    "source": [
-    "normalizer.convert_number_to_word(\"sabah 3 yumurta yedim ve tartıldığımda 1.15 kilogram aldığımı gördüm\".split())"
+    "normalizer.convert_numbers_to_words(\"sabah 3 yumurta yedim ve tartıldığımda 1.15 kilogram aldığımı gördüm\".split())"
    ]
   },
   {
@@ -546,7 +546,7 @@
    ],
    "source": [
     "sentence = \"acaba bugün kahvaltıda kahve yerine çay mı içsem ya da neyse süt içeyim\"\n",
-    "stopword_remover.drop_stop_words(sentence.split(\" \"))"
+    "stopword_remover.drop_stop_words(sentence.split())"
    ]
   },
   {
