stopword remover API re-designed

--- a/Examples.ipynb
+++ b/Examples.ipynb
@@ -300,17 +300,17 @@
    "metadata": {},
    "source": [
     "#### Normalizer\n",
+    "- Spelling/Typo correction\n",
+    "- Converts numbers to word form\n",
+    "- Deascification\n",
     "- Lowercasing\n",
     "- Punctuation removal\n",
-    "- Accent mark removal\n",
-    "- Deascification\n",
-    "- Converts numbers to word form\n",
-    "- Spelling/Typo correction"
+    "- Accent mark removal"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,67 +320,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'test karakterleri: iığüöşç'"
+       "['kasıtlı', 'yazım', 'hatası', 'ekliyorum']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "normalizer.lower_case(\"Test karakterleri: İIĞÜÖŞÇ\")"
+    "normalizer.correct_typos(\"kassıtlı yaezım hatasssı ekliyorumm\".split())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'noktalamalı test cümlesidir'"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "normalizer.remove_punctuations(\"noktalamalı test cümlesidir...\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['böyle', 'şey', 'görmedim', 'duymadım']"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "normalizer.deasciify(\"boyle sey gormedim duymadim\".split())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -401,13 +361,53 @@
        " 'gördüm']"
       ]
      },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "normalizer.convert_numbers_to_words(\"sabah 3 yumurta yedim ve tartıldığımda 1,15 kilogram aldığımı gördüm\".split())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['böyle', 'şey', 'görmedim', 'duymadım']"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "normalizer.deasciify(\"boyle sey gormedim duymadim\".split())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'test karakterleri: iığüöşç'"
+      ]
+     },
      "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "normalizer.convert_numbers_to_words(\"sabah 3 yumurta yedim ve tartıldığımda 1.15 kilogram aldığımı gördüm\".split())"
+    "normalizer.lower_case(\"Test karakterleri: İIĞÜÖŞÇ\")"
    ]
   },
   {
@@ -418,7 +418,7 @@
     {
      "data": {
       "text/plain": [
-       "'merhaba guzel yılkı atı'"
+       "'noktalamalı test cümlesidir'"
       ]
      },
      "execution_count": 19,
@@ -427,7 +427,7 @@
     }
    ],
    "source": [
-    "normalizer.remove_accent_marks(\"merhâbâ gûzel yîlkî atî\")"
+    "normalizer.remove_punctuations(\"noktalamalı test cümlesidir...\")"
    ]
   },
   {
@@ -438,7 +438,7 @@
     {
      "data": {
       "text/plain": [
-       "['kasıtlı', 'yazım', 'hatası', 'ekliyorum']"
+       "'merhaba guzel yılkı atı'"
       ]
      },
      "execution_count": 20,
@@ -447,7 +447,7 @@
     }
    ],
    "source": [
-    "normalizer.correct_typos(\"kassıtlı yaezım hatasssı ekliyorumm\".split())"
+    "normalizer.remove_accent_marks(\"merhâbâ gûzel yîlkî atî\")"
    ]
   },
   {
@@ -515,7 +515,7 @@
     "#### Stopword Remover\n",
     "- Static: uses pre-defined lexicon of stopwords\n",
     "- Dynamic: detects stop-words regardless of language and context\n",
-    "    - optional: can detect and drop rare-words (frequency of 1)"
+    "    - optional: can detect and drop rare-words"
    ]
   },
   {
@@ -553,44 +553,33 @@
    "cell_type": "code",
    "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ama', 'aşı', 'gelip', 'eve']\n"
+     ]
+    }
+   ],
    "source": [
     "sentence = \"ben bugün gidip aşı olacağım sonra da eve gelip telefon açacağım aşı nasıl etkiledi eve gelip anlatırım aşı olmak bu dönemde çok ama ama ama ama çok önemli\"\n",
-    "stopword_remover.dynamically_detect_stop_words(sentence.split())"
+    "dynamically_detected_stop_words = stopword_remover.dynamically_detect_stop_words(sentence.split())\n",
+    "print(dynamically_detected_stop_words)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['ama', 'aşı', 'gelip', 'eve']"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "stopword_remover.dynamic_stop_words"
+    "stopword_remover.add_to_stop_words(dynamically_detected_stop_words)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "stopword_remover.unify_stop_words()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +588,7 @@
        "['önemli', 'demiş', 'miydim']"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -617,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -626,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -654,20 +643,20 @@
        " ('uther', 0.5343433618545532)]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Word2Vec\n",
-    "model = Word2Vec.load('vnlp/turkish_embeddings/Word2Vec_large.model')\n",
+    "model = Word2Vec.load('vnlp/turkish_word_embeddings/Word2Vec_large.model')\n",
     "model.wv.most_similar('gandalf', topn = 20)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -695,14 +684,14 @@
        " ('pisliklerden', 0.800993025302887)]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# FastText\n",
-    "model = Word2Vec.load('vnlp/turkish_embeddings/FastText_large.model')\n",
+    "model = Word2Vec.load('vnlp/turkish_word_embeddings/FastText_large.model')\n",
     "model.wv.most_similar('yamaçlardan', topn = 20)"
    ]
   }
