word embedding matrix is now common for three models and package size is reduced by 64mb

--- a/Examples.ipynb
+++ b/Examples.ipynb
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "a1c42cff",
    "metadata": {},
    "outputs": [],
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "9eba1ed4",
    "metadata": {
     "scrolled": false
@@ -175,7 +175,7 @@
        " (13, '.', 12, 'punct')]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +186,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
+   "id": "8b9a6984",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "[(1, \"Maltepe'nin\", 2, 'nmod'),\n",
+    " (2, 'turlamak', 5, 'obl'),\n",
+    " (3, 'için', 2, 'case'),\n",
+    " (4, 'güzel', 5, 'amod'),\n",
+    " (5, 'bir', 7, 'nmod'),\n",
+    " (6, 'sahil', 7, 'nmod'),\n",
+    " (7, 'yolu', 9, 'nsubj'),\n",
+    " (8, ',', 7, 'punct'),\n",
+    " (9, 'bir', 12, 'nmod'),\n",
+    " (10, 'de', 9, 'flat'),\n",
+    " (11, \"Dragos'u\", 9, 'flat'),\n",
+    " (12, 'vardır', 0, 'root'),\n",
+    " (13, '.', 12, 'punct')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "e29e2a02",
    "metadata": {},
    "outputs": [],
@@ -196,14 +218,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "72792075",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<span class=\"tex2jax_ignore\"><svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" xml:lang=\"en\" id=\"f787598f69d3413aae921e26fac15f42-0\" class=\"displacy\" width=\"650\" height=\"237.0\" direction=\"ltr\" style=\"max-width: none; height: 237.0px; color: #000000; background: #ffffff; font-family: Arial; direction: ltr\">\n",
+       "<span class=\"tex2jax_ignore\"><svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" xml:lang=\"en\" id=\"4dc4d77cf41a4a92b964d73a38d98d32-0\" class=\"displacy\" width=\"650\" height=\"237.0\" direction=\"ltr\" style=\"max-width: none; height: 237.0px; color: #000000; background: #ffffff; font-family: Arial; direction: ltr\">\n",
        "<text class=\"displacy-token\" fill=\"currentColor\" text-anchor=\"middle\" y=\"147.0\">\n",
        "    <tspan class=\"displacy-word\" fill=\"currentColor\" x=\"50\">Oğuz'un</tspan>\n",
        "    <tspan class=\"displacy-tag\" dy=\"2em\" fill=\"currentColor\" x=\"50\">PROPN</tspan>\n",
@@ -235,41 +257,41 @@
        "</text>\n",
        "\n",
        "<g class=\"displacy-arrow\">\n",
-       "    <path class=\"displacy-arc\" id=\"arrow-f787598f69d3413aae921e26fac15f42-0-0\" stroke-width=\"2px\" d=\"M62,102.0 C62,2.0 250.0,2.0 250.0,102.0\" fill=\"none\" stroke=\"currentColor\"/>\n",
+       "    <path class=\"displacy-arc\" id=\"arrow-4dc4d77cf41a4a92b964d73a38d98d32-0-0\" stroke-width=\"2px\" d=\"M62,102.0 C62,2.0 250.0,2.0 250.0,102.0\" fill=\"none\" stroke=\"currentColor\"/>\n",
        "    <text dy=\"1.25em\" style=\"font-size: 0.8em; letter-spacing: 1px\">\n",
-       "        <textPath xlink:href=\"#arrow-f787598f69d3413aae921e26fac15f42-0-0\" class=\"displacy-label\" startOffset=\"50%\" side=\"left\" fill=\"currentColor\" text-anchor=\"middle\">nmod</textPath>\n",
+       "        <textPath xlink:href=\"#arrow-4dc4d77cf41a4a92b964d73a38d98d32-0-0\" class=\"displacy-label\" startOffset=\"50%\" side=\"left\" fill=\"currentColor\" text-anchor=\"middle\">nmod</textPath>\n",
        "    </text>\n",
        "    <path class=\"displacy-arrowhead\" d=\"M250.0,104.0 L258.0,92.0 242.0,92.0\" fill=\"currentColor\"/>\n",
        "</g>\n",
        "\n",
        "<g class=\"displacy-arrow\">\n",
-       "    <path class=\"displacy-arc\" id=\"arrow-f787598f69d3413aae921e26fac15f42-0-1\" stroke-width=\"2px\" d=\"M162,102.0 C162,52.0 247.0,52.0 247.0,102.0\" fill=\"none\" stroke=\"currentColor\"/>\n",
+       "    <path class=\"displacy-arc\" id=\"arrow-4dc4d77cf41a4a92b964d73a38d98d32-0-1\" stroke-width=\"2px\" d=\"M162,102.0 C162,52.0 247.0,52.0 247.0,102.0\" fill=\"none\" stroke=\"currentColor\"/>\n",
        "    <text dy=\"1.25em\" style=\"font-size: 0.8em; letter-spacing: 1px\">\n",
-       "        <textPath xlink:href=\"#arrow-f787598f69d3413aae921e26fac15f42-0-1\" class=\"displacy-label\" startOffset=\"50%\" side=\"left\" fill=\"currentColor\" text-anchor=\"middle\">amod</textPath>\n",
+       "        <textPath xlink:href=\"#arrow-4dc4d77cf41a4a92b964d73a38d98d32-0-1\" class=\"displacy-label\" startOffset=\"50%\" side=\"left\" fill=\"currentColor\" text-anchor=\"middle\">amod</textPath>\n",
        "    </text>\n",
        "    <path class=\"displacy-arrowhead\" d=\"M247.0,104.0 L255.0,92.0 239.0,92.0\" fill=\"currentColor\"/>\n",
        "</g>\n",
        "\n",
        "<g class=\"displacy-arrow\">\n",
-       "    <path class=\"displacy-arc\" id=\"arrow-f787598f69d3413aae921e26fac15f42-0-2\" stroke-width=\"2px\" d=\"M262,102.0 C262,52.0 347.0,52.0 347.0,102.0\" fill=\"none\" stroke=\"currentColor\"/>\n",
+       "    <path class=\"displacy-arc\" id=\"arrow-4dc4d77cf41a4a92b964d73a38d98d32-0-2\" stroke-width=\"2px\" d=\"M262,102.0 C262,52.0 347.0,52.0 347.0,102.0\" fill=\"none\" stroke=\"currentColor\"/>\n",
        "    <text dy=\"1.25em\" style=\"font-size: 0.8em; letter-spacing: 1px\">\n",
-       "        <textPath xlink:href=\"#arrow-f787598f69d3413aae921e26fac15f42-0-2\" class=\"displacy-label\" startOffset=\"50%\" side=\"left\" fill=\"currentColor\" text-anchor=\"middle\">nmod</textPath>\n",
+       "        <textPath xlink:href=\"#arrow-4dc4d77cf41a4a92b964d73a38d98d32-0-2\" class=\"displacy-label\" startOffset=\"50%\" side=\"left\" fill=\"currentColor\" text-anchor=\"middle\">nmod</textPath>\n",
        "    </text>\n",
        "    <path class=\"displacy-arrowhead\" d=\"M347.0,104.0 L355.0,92.0 339.0,92.0\" fill=\"currentColor\"/>\n",
        "</g>\n",
        "\n",
        "<g class=\"displacy-arrow\">\n",
-       "    <path class=\"displacy-arc\" id=\"arrow-f787598f69d3413aae921e26fac15f42-0-3\" stroke-width=\"2px\" d=\"M362,102.0 C362,52.0 447.0,52.0 447.0,102.0\" fill=\"none\" stroke=\"currentColor\"/>\n",
+       "    <path class=\"displacy-arc\" id=\"arrow-4dc4d77cf41a4a92b964d73a38d98d32-0-3\" stroke-width=\"2px\" d=\"M362,102.0 C362,52.0 447.0,52.0 447.0,102.0\" fill=\"none\" stroke=\"currentColor\"/>\n",
        "    <text dy=\"1.25em\" style=\"font-size: 0.8em; letter-spacing: 1px\">\n",
-       "        <textPath xlink:href=\"#arrow-f787598f69d3413aae921e26fac15f42-0-3\" class=\"displacy-label\" startOffset=\"50%\" side=\"left\" fill=\"currentColor\" text-anchor=\"middle\">conj</textPath>\n",
+       "        <textPath xlink:href=\"#arrow-4dc4d77cf41a4a92b964d73a38d98d32-0-3\" class=\"displacy-label\" startOffset=\"50%\" side=\"left\" fill=\"currentColor\" text-anchor=\"middle\">conj</textPath>\n",
        "    </text>\n",
        "    <path class=\"displacy-arrowhead\" d=\"M362,104.0 L354,92.0 370,92.0\" fill=\"currentColor\"/>\n",
        "</g>\n",
        "\n",
        "<g class=\"displacy-arrow\">\n",
-       "    <path class=\"displacy-arc\" id=\"arrow-f787598f69d3413aae921e26fac15f42-0-4\" stroke-width=\"2px\" d=\"M462,102.0 C462,52.0 547.0,52.0 547.0,102.0\" fill=\"none\" stroke=\"currentColor\"/>\n",
+       "    <path class=\"displacy-arc\" id=\"arrow-4dc4d77cf41a4a92b964d73a38d98d32-0-4\" stroke-width=\"2px\" d=\"M462,102.0 C462,52.0 547.0,52.0 547.0,102.0\" fill=\"none\" stroke=\"currentColor\"/>\n",
        "    <text dy=\"1.25em\" style=\"font-size: 0.8em; letter-spacing: 1px\">\n",
-       "        <textPath xlink:href=\"#arrow-f787598f69d3413aae921e26fac15f42-0-4\" class=\"displacy-label\" startOffset=\"50%\" side=\"left\" fill=\"currentColor\" text-anchor=\"middle\">punct</textPath>\n",
+       "        <textPath xlink:href=\"#arrow-4dc4d77cf41a4a92b964d73a38d98d32-0-4\" class=\"displacy-label\" startOffset=\"50%\" side=\"left\" fill=\"currentColor\" text-anchor=\"middle\">punct</textPath>\n",
        "    </text>\n",
        "    <path class=\"displacy-arrowhead\" d=\"M462,104.0 L454,92.0 470,92.0\" fill=\"currentColor\"/>\n",
        "</g>\n",
@@ -306,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "3981c308",
    "metadata": {},
    "outputs": [],
@@ -353,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "a19c4f55",
    "metadata": {},
    "outputs": [],
@@ -364,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "4782f1dd",
    "metadata": {},
    "outputs": [
@@ -374,7 +396,7 @@
        "0.007859406"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -385,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "7e011191",
    "metadata": {},
    "outputs": [
@@ -395,7 +417,7 @@
        "1"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "7454e45b",
    "metadata": {},
    "outputs": [
@@ -416,7 +438,7 @@
        "0.4482034"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
