--- a/Examples.ipynb
+++ b/Examples.ipynb
@@ -102,7 +102,7 @@
        " ('adım', 'O'),\n",
        " ('Melikşah', 'PER'),\n",
        " (',', 'O'),\n",
-       " ('29', 'O'),\n",
+       " ('32', 'O'),\n",
        " ('yaşındayım', 'O'),\n",
        " (',', 'O'),\n",
        " (\"İstanbul'da\", 'LOC'),\n",
@@ -123,7 +123,7 @@
    ],
    "source": [
     "ner.predict(\n",
-    "    \"Benim adım Melikşah, 29 yaşındayım, İstanbul'da ikamet ediyorum ve VNGRS AI Takımı'nda çalışıyorum.\"\n",
+    "    \"Benim adım Melikşah, 32 yaşındayım, İstanbul'da ikamet ediyorum ve VNGRS AI Takımı'nda çalışıyorum.\"\n",
     ")"
    ]
   },
@@ -702,8 +702,8 @@
     {
      "data": {
       "text/plain": [
-       "['Av. Meryem Beşer, 3.5 yıldır süren dava ile ilgili dedi ki, \"Duruşma bitti, dava lehimize sonuçlandı.\"',\n",
-       " 'Bu harika bir haberdi!']"
+       "['Dr. Can Çıkaran, tedavisi devam eden hastanın durumu ile ilgili dedi ki, "Can çıkar, huy çıkmaz."',\n",
+       " 'Hasta yakınları ne hissedeceğini şaşırdı.']"
       ]
      },
      "execution_count": 27,
@@ -713,7 +713,7 @@
    ],
    "source": [
     "sentence_splitter.split_sentences(\n",
-    "    'Av. Meryem Beşer, 3.5 yıldır süren dava ile ilgili dedi ki, \"Duruşma bitti, dava lehimize sonuçlandı.\" Bu harika bir haberdi!'\n",
+    "    'Dr. Can Çıkaran, tedavisi devam eden hastanın durumu ile ilgili dedi ki, \"Can çıkar, huy çıkmaz.\" Hasta yakınları ne hissedeceğini şaşırdı.",
     ")"
    ]
   },
