--- a/Examples.ipynb
+++ b/Examples.ipynb
@@ -702,7 +702,7 @@
     {
      "data": {
       "text/plain": [
-       "['Dr. Can Çıkaran, tedavisi devam eden hastanın durumu ile ilgili dedi ki, "Can çıkar, huy çıkmaz."',\n",
+       "['Dr. Can Çıkaran, tedavisi devam eden hastanın durumu ile ilgili dedi ki, \"Can çıkar, huy çıkmaz.\"',\n",
        " 'Hasta yakınları ne hissedeceğini şaşırdı.']"
       ]
      },
